# KActivityJumper

./: .gitignore  AJump.cpp  AJump.hpp  CMakeLists.txt  LICENSE.txt  README.md  error.hpp  install  jumperDestinationConfig.txt  myJumperShortcutExport.khotkeys  run  uninstall
cmake/: DBusMacros.cmake
config/: jumperDestinationConfig.config  org.kde.ActivityJumper.service.in
package/: metadata.desktop
package/contents/ui/: .main.qml.kate-swp  ActivityJumper.qml  main.qml
package/icons/breeze-dark/: .directory
plugin/: CMakeLists.txt  plasmoidplugin.cpp  plasmoidplugin.h  plasmoidplugin.hpp  plugin.cpp  qmldir
src/: AJump.cpp  AJump.hpp  ActivityJumper.pro  activityjumper.cpp  activityjumper.hpp  app.cpp  common.h  error.cpp  plugin.cpp
